--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
 	"version": "1.1.0",
 	"description": "Personal portfolio template built using Reactjs",
 	"author": {
-		"name": "Tharindu N. Madhusanka",
-		"email": "mail@tharindu.dev",
-		"url": "https://tharindu.dev"
+		"name": "Jesse Falcon-Musik",
+		"email": "jfalconmusik@gmail.com",
+		"url": "https://jfalconmusik-portfolio.com"
 	},
 	"license": "MIT",
 	"private": true,
