Change Live Url

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"author": {
 		"name": "Jesse Falcon-Musik",
 		"email": "jfalconmusik@gmail.com",
-		"url": "https://jfalconmusik-portfolio.com"
+		"url": "https://jfalc-portfolio.web.app"
 	},
 	"license": "MIT",
 	"private": true,
